Add Set Grid Feature

--- a/style.css
+++ b/style.css
@@ -3,19 +3,29 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
+    flex-direction: column;
+    gap: 50px;
+}
+
+button{
+    box-sizing: border-box;
+    height: 35px;
+    width: 100px;
+    padding: 0;
+    font-weight: bold;
 }
 
 .container{
     border: 1px solid black;
-    width: 800px;
-    height: 800px;
-    border: 1px solid black;
+    display: flex;
     flex-wrap: wrap;
+    height: 800px;
+    width: 800px;
 }
 
 .square{
+    width: 800px;
+    height: 800px;
     box-sizing: border-box;
-    height: 50px;
-    width: 50px;
     border: 1px solid black;
 }
